made some corrections in pom.xml